Создан новый .gitignore с игнорированием .env

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ __pycache__/
 # Файлы конфигурации IDE (например, Visual Studio, PyCharm)
 .idea/
 .vscode/
+
+# Файл с переменными окружения
+.env
